Ensure it aligns

--- a/assets/variant-list.css
+++ b/assets/variant-list.css
@@ -481,7 +481,7 @@ variant-list-remove-button {
 
 @media screen and (min-width: 750px) {
   .variant-list__total-items {
-    padding-left: calc(((11rem / var(--font-body-scale) + var(--inputs-border-width) * 2)/ 2) - 1rem);
+    padding-left: calc(((11rem / var(--font-body-scale) + var(--inputs-border-width) * 2)/ 2) - 0.7rem);
   }
 
   .variant-list__total-items {
